# personal-sysadmin

./: 0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  README.adoc  STATE.scm  nerdctl-compose.yaml  seccomp.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  ghcr-publish.yml  quality.yml  scorecard.yml  secret-scanner.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
docs/: CICD-ANALYSIS.md  GITVISOR-DESIGN.md
fuzz/: Cargo.toml
gitvisor/: config.example.yml
gitvisor/rules/: cicd_rules.lgt  rule_distiller.lgt
gitvisor/schemas/: arangodb.json
scripts/: setup-new-repo.sh
scripts/github-admin/: add-community-health.sh  add-descriptions.sh  add-justfile-mustfile.sh  add-language-blockers.sh  add-license-badges.sh  add-missing-files.sh  add-readme-roadmap.sh  add-scm-files.sh  advanced-security-config.sh  configure-all-repos.sh  language-blocker.yml  setup-palimpsest.sh
src/: correlation.rs  lib.rs  main.rs  validation.rs
src/ai/: mod.rs
src/cache/: mod.rs
src/daemon/: mod.rs
src/forum/: mod.rs
src/p2p/: mod.rs
src/reasoning/: mod.rs
src/rules/: lifecycle.rs  mod.rs
src/storage/: mod.rs
src/tools/: crisis.rs  disk.rs  health.rs  mod.rs  monitor.rs  network.rs  process.rs  security.rs  service.rs
tui-ada/: psa_tui.gpr
tui-ada/src/: psa_client.adb  psa_client.ads  psa_tui.adb  psa_ui.adb  psa_ui.ads
